--- a/Contact.html
+++ b/Contact.html
@@ -1,6 +1,8 @@
 </html>
-<head><title>contact</title></head> 
-	<body>
-	
+<head>
+	<title>contact</title>
+</head> 
+<body>
+	This is a test page.
 	</body>
 	</html>
