--- a/flex.html
+++ b/flex.html
@@ -6,14 +6,15 @@
 	 </head>
 	 <body>
 	 	<header class="head">
-	 		Header
+	 		Learning to use flex
 	 	</header>
+	 	<h1>Hello world!</h1>
 	 	<div class="container">
 	 	<div class="left"> Left column </div>
 	 	<div class="right"> Right column </div>
 	 	</div>
 	 </body>
 	 <footer class="foot">
-	 	Footer
+	 	This is the Footer.
 	 </footer>
 </html>
